--- a/partials/header.html
+++ b/partials/header.html
@@ -2,13 +2,12 @@
 
   <nav class="menu" id="menu">
     <ul class="menu-list">
-      <li class="menu-item"><span class="menu-link" id="section1Btn">Chi siamo</span></li>
-      <li class="menu-item"><span class="menu-link" id="section2Btn">Postazioni PC</span></li>
-      <li class="menu-item"><span class="menu-link" id="section3Btn">Postazioni console</span></li>
-      <li class="menu-item"><span class="menu-link" id="section4Btn">Giochi da tavolo</span></li>
-      <li class="menu-item"><span class="menu-link" id="section5Btn">Giochi di ruolo</span></li>
-      <li class="menu-item">
-        <span class="menu-link" id="section6Btn">Contatti</span>
+      <li class="menu-item"><a class="menu-link" href="#section1">Chi siamo</a></li>
+      <li class="menu-item"><a class="menu-link" href="#section2">Postazioni PC</a></li>
+      <li class="menu-item"><a class="menu-link" href="#section3">Console</a></li>
+      <li class="menu-item"><a class="menu-link" href="#section4">Giochi da tavolo</a></li>
+      <li class="menu-item"><a class="menu-link" href="#section5">Giochi di ruolo</a></li>
+      <li class="menu-item"><a class="menu-link" href="#section6">Contatti</a>
       </li>
     </ul>
   </nav>
