--- a/styles/loader.css
+++ b/styles/loader.css
@@ -13,6 +13,17 @@
 	align-content: center;
 	transition: 0.5s all;
 }
+
+svg#overworld-logo {
+  height: 14rem;
+  width: 16rem;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-left: -8rem;
+  margin-top: -7rem;
+}
+
 .loader {
 	width: 100px;
 	height: 100px;
