--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=BenchNine:700&subset=latin-ext");
+@import url('https://fonts.googleapis.com/css?family=Ubuntu:400,700');
 @import "../node_modules/purecss/build/base.css";
 @import "../node_modules/purecss/build/grids-core.css";
 @import "../node_modules/purecss/build/grids-responsive.css";
@@ -9,7 +9,7 @@
   --mainColor: #FFFFFF;
   --bgColor: #000000;
   --highlightColor: #FF6600;
-  --headerHeight: 3.2rem;
+  --headerHeight: 3rem;
   --globalMargin: 1.5vh;
 }
 
@@ -34,7 +34,7 @@ html {
 body {
   all: initial;
   color: var(--mainColor);
-  font-family: 'BenchNine';
+  font-family: 'Ubuntu', sans-serif;
   font-size: var(--fontSize);
   line-height: calc(var(--fontSize) * 1.4);
   height: 100%;
@@ -47,6 +47,12 @@ html,body {
 p {
   margin:0;
   padding:0;
+}
+
+a {
+  color: var(--mainColor);
+  font-weight: 700;
+  text-decoration: none;
 }
 
 .main {
@@ -105,7 +111,7 @@ p {
     .menu {
       display: block;
       clear: both;
-      height: 1.6em;
+      height: var(--headerHeight);
       background-color: color(var(--bgColor));
       position: fixed;
       width: 100%;
@@ -122,14 +128,18 @@ p {
           .menu-link {
             text-transform: uppercase;
             text-decoration: none;
-            font-size: .8em;
-            line-height: .3em;
+            font-size: .6em;
+            font-weight: 700;
+
             color: color( var(--mainColor) lightness(90%) );
             margin-right: var(--globalMargin);
             &:hover,&:active, &.active {
-              color: color( var(--highlightColor));
+              color: color( var(--highlightColor) lightness(80%));
               transition: color .3s ease;
               cursor: pointer;
+            }
+            &.active {
+              color: color( var(--highlightColor));
             }
           }
         }
@@ -143,6 +153,7 @@ p {
     margin: 0;
     box-sizing: border-box;
     width: 100%;
+    text-shadow: 0 0 1em #d06bff, 0 0 1.2em #d06bff, 0 0 0.1em #f2d5ff;
 
     .section {
       position: relative;
@@ -172,6 +183,11 @@ p {
       }
       .section-title {
         position: relative;
+        width: 100%;
+        text-align: center;
+        top: 20%;
+        text-transform: uppercase;
+        margin: 0 auto;
         z-index: 10;
         @media (--viewport-large) {
           &:hover {
@@ -198,20 +214,23 @@ p {
         min-height: 400px;
       }
       .contents {
-        display: block;
         z-index: 10;
         position: absolute;
         top: 0;
-        right: 0;
         bottom: 0;
         left: 0;
+        right: 0;
+        width: 80%;
+        height: 70%;
+        margin: auto;
+        display: table;
         p {
-          vertical-align: middle;
-          position: absolute;
-          top: 50%;
-          display: block;
-          width: 100%;
           text-align: center;
+          font-size: 130%;
+          line-height: 110%;
+          display: table-cell;
+          vertical-align: middle;
+          width: 70%;
         }
       }
     }
