--- a/partials/header.html
+++ b/partials/header.html
@@ -12,4 +12,10 @@
     </ul>
   </nav>
 
+  <a href="#" class="burger-button" id="burger-button">
+    <s class="bar"></s>
+    <s class="bar"></s>
+    <s class="bar"></s>
+  </a>
+
 </header>
