Add logo animation

--- a/layouts/layout.html
+++ b/layouts/layout.html
@@ -16,6 +16,8 @@
 </head>
 
 <body class="home">
+    {{> logosvg }}
+
   <script src="/js/loader.js"></script>
   <!-- LOADER -->
   <div class="loader-body" id="loader">
