--- a/partials/logosvg.html
+++ b/partials/logosvg.html
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<svg id="overworld-logo" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns="http://www.w3.org/2000/svg" height="270" viewBox="0 0 299.99787 269.99379" width="300" version="1.1" xmlns:cc="http://creativecommons.org/ns#" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:dc="http://purl.org/dc/elements/1.1/">
+<svg class="overworld-logo" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns="http://www.w3.org/2000/svg" height="270" viewBox="0 0 299.99787 269.99379" width="300" version="1.1" xmlns:cc="http://creativecommons.org/ns#" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:dc="http://purl.org/dc/elements/1.1/">
  <defs id="defs4992">
   <linearGradient id="linearGradient5457-2-2" x1="332.35" xlink:href="#linearGradient5057" gradientUnits="userSpaceOnUse" x2="347.69" gradientTransform="matrix(-1.5057,0,0,1.4769,722.36,-1419.3)" y1="1387.7" y2="1348.8"/>
   <linearGradient id="linearGradient5057">
