--- a/styles/loader.css
+++ b/styles/loader.css
@@ -1,53 +1,63 @@
 /*LOADER*/
-.loader-body {
-	width: 100%;
-	height: 100vh;
-	background-color: black; /*Here you can change background color of the loader */
-	position: fixed;
-	z-index: 100;
-	visibility: visible;
-	top: 0;
-	left: 0;
-	text-align: center;
-	justify-content: center;
-	align-content: center;
-	transition: 0.5s all;
-}
 
-svg#overworld-logo {
-  height: 14rem;
-  width: 16rem;
-  position: absolute;
+.overworld-logo {
+  height: 35vh;
+  width: 40vw;
+  position: fixed;
   top: 50%;
   left: 50%;
-  margin-left: -8rem;
-  margin-top: -7rem;
+  margin-left: -20vw;
+  margin-top: -18vh;
+  animation: spinCube 5s infinite linear;
+  z-index: 5;
+  opacity: .3;
+}
+
+.loader-body {
+  width: 100%;
+  height: 100vh;
+  background-color: black; /*Here you can change background color of the loader */
+  position: fixed;
+  z-index: 100;
+  visibility: visible;
+  top: 0;
+  left: 0;
+  text-align: center;
+  justify-content: center;
+  align-content: center;
+  transition: 0.5s all;
+  .overworld-logo {
+    opacity: 1;
+  }
+}
+
+
+@keyframes spinCube {
+  from { transform:   rotateY(0deg); }
+  to { transform: rotateY(360deg);}
 }
 
 .loader {
-	width: 100px;
-	height: 100px;
-	border: 12px white solid; 				/*Here you can change color of the loader*/
-	border-radius: 50%;
-	position: absolute;
-	border-top-color: red ; 				/*Here you can change color of the loader*/
-	transform: translate(-50%, -50%);
-	top: 50%;
-	left: 50%;
-	-webkit-animation: 1s spin infinite linear;
-	-o-animation: 1s spin infinite linear;
-	animation: 1s spin infinite linear;
-
+  width: 100px;
+  height: 100px;
+  border: 12px white solid; 				/*Here you can change color of the loader*/
+  border-radius: 50%;
+  position: absolute;
+  border-top-color: red ; 				/*Here you can change color of the loader*/
+  transform: translate(-50%, -50%);
+  top: 50%;
+  left: 50%;
+  animation: 1s spin infinite linear;
 }
 .loader-body.done {
-	visibility: hidden;
-	opacity: 0;
+  visibility: hidden;
+  opacity: 0;
 }
 @keyframes spin {
-	from {
-		transform: translate(-50%, -50%) rotate(0deg);
-	}
-	to {
-		transform: translate(-50%, -50%) rotate(360deg);
-	}
+  from {
+    transform: translate(-50%, -50%) rotate(0deg);
+  }
+  to {
+    transform: translate(-50%, -50%) rotate(360deg);
+  }
 }
