--- a/layouts/layout.html
+++ b/layouts/layout.html
@@ -11,6 +11,7 @@
   <meta property="og:type" content="website" />
   <meta property="og:url" content="{{url}}" />
   <meta property="og:image" content="{{url}}/{{ogImage}}" />
+  {{> favicon }}
   {{> styles }}
 
 </head>
