--- a/styles/style.css
+++ b/styles/style.css
@@ -151,6 +151,7 @@ a {
 
       @media (--viewport-medium) {
         opacity: 0;
+        visibility: hidden;
         transition: opacity .3s ease, visibility 0s ease .3s;
         &.open {
           opacity: 1;
@@ -221,19 +222,6 @@ a {
         z-index: 1;
       }
 
-      .section-title {
-        position: relative;
-        width: 100%;
-        text-align: center;
-        top: 20%;
-        text-transform: uppercase;
-        margin: 0 auto;
-        z-index: 10;
-        @media (--viewport-medium) {
-          font-size: 100%;
-          top: 10%;
-        }
-      }
 
       &:hover {
         .section-title {
@@ -248,29 +236,38 @@ a {
         height: auto;
         min-height: 400px;
       }
+
+      .section-title {
+        position: relative;
+        width: 100%;
+        text-align: center;
+        top: 10vh;
+        margin: 0;
+        text-transform: uppercase;
+        z-index: 10;
+        font-size: 7vh;
+        line-height: 7vh;
+      }
+
       .contents {
         z-index: 10;
-        position: absolute;
+        position: relative;
         top: 0;
         bottom: 0;
         left: 0;
         right: 0;
         width: 100%;
-        height: 70%;
+        height: 98%;
         margin: auto;
-        display: table;
-        @media (--viewport-medium) {
-          width: 95%;
-        }
+        width: 95%;
+
         p {
           text-align: center;
-          font-size: 130%;
-          line-height: 110%;
-          display: table-cell;
-          vertical-align: middle;
-
+          font-size: 4vh;
+          line-height: 4vh;
+          margin-top: 12vh;
           @media (--viewport-medium) {
-            font-size: 5vw;
+            font-size: 6vw;
             a {
               font-size: 4vw;
             }
