--- a/partials/header.html
+++ b/partials/header.html
@@ -1,6 +1,9 @@
 <header class="header">
-
+  <div class="brand">
+    {{> logotypesvg }}
+  </div>
   <nav class="menu" id="menu">
+
     <ul class="menu-list">
       <li class="menu-item"><a class="menu-link" href="#section1">Chi siamo</a></li>
       <li class="menu-item"><a class="menu-link" href="#section2">Postazioni PC</a></li>
@@ -12,10 +15,10 @@
     </ul>
   </nav>
 
-  <a href="#" class="burger-button" id="burger-button">
+  <div class="burger-button" id="burger-button">
     <s class="bar"></s>
     <s class="bar"></s>
     <s class="bar"></s>
-  </a>
+  </div>
 
 </header>
