--- a/layouts/layout.html
+++ b/layouts/layout.html
@@ -16,17 +16,15 @@
 
 </head>
 
-<body class="home">
-  {{> logosvg }}
-
-  <script src="/js/loader.js"></script>
-  <!-- LOADER -->
-  <div class="loader-body" id="loader">
+<body>
+  {{> analytics }}
+  <div class="logo-wrapper">
     {{> logosvg }}
   </div>
-  <!-- LOADER END -->
+  <script src="/js/loader.js"></script>
+  <div class="loader-body" id="loader"></div>
 
-  {{> analytics }}
+
 
   <div class="main">
 
@@ -39,8 +37,10 @@
         <div class="contents">
           <h2 class="section-title">{{../this.title}}</h2>
           {{{../this.contents}}}
+
+          <i class="arrow down"></i>
         </div>
-        <i class="arrow down"></i>
+
       </div>
       {{/each}}
       {{/each}}
