--- a/styles/loader.css
+++ b/styles/loader.css
@@ -1,16 +1,25 @@
 /*LOADER*/
 
-.overworld-logo {
+.logo-wrapper {
   height: 35vh;
   width: 40vw;
   position: fixed;
   top: 50%;
   left: 50%;
-  margin-left: -20vw;
-  margin-top: -18vh;
+  transform: translateX(-50%) translateY(-40%);
+  z-index: 105;
+  opacity: 1;
+  &.back {
+    z-index: 10;
+    opacity: .3;
+    transition: opacity .5s, z-index 0s linear .5s;
+  }
+}
+
+.overworld-logo {
   animation: spinCube 5s infinite linear;
-  z-index: 5;
-  opacity: .3;
+  width: 100%;
+  height: 100%;
 }
 
 .loader-body {
@@ -26,33 +35,17 @@
   justify-content: center;
   align-content: center;
   transition: 0.5s all;
-  .overworld-logo {
-    opacity: 1;
+  &.done {
+    visibility: hidden;
+    opacity: 0;
   }
 }
 
-
 @keyframes spinCube {
-  from { transform:   rotateY(0deg); }
+  from { transform: rotateY(0deg); }
   to { transform: rotateY(360deg);}
 }
 
-.loader {
-  width: 100px;
-  height: 100px;
-  border: 12px white solid; 				/*Here you can change color of the loader*/
-  border-radius: 50%;
-  position: absolute;
-  border-top-color: red ; 				/*Here you can change color of the loader*/
-  transform: translate(-50%, -50%);
-  top: 50%;
-  left: 50%;
-  animation: 1s spin infinite linear;
-}
-.loader-body.done {
-  visibility: hidden;
-  opacity: 0;
-}
 @keyframes spin {
   from {
     transform: translate(-50%, -50%) rotate(0deg);
