--- a/layouts/layout.html
+++ b/layouts/layout.html
@@ -21,7 +21,7 @@
   <div class="logo-wrapper">
     {{> logosvg }}
   </div>
-  <script src="/js/loader.js"></script>
+  <script src="/js/loader.js?v=1.0.0"></script>
   <div class="loader-body" id="loader"></div>
 
 
