--- a/layouts/layout.html
+++ b/layouts/layout.html
@@ -18,14 +18,12 @@
 
 <body>
   {{> analytics }}
-  <div class="logo-wrapper">
+  <div id="emblem" class="logo-wrapper">
     {{> logosvg }}
   </div>
   <script src="/js/loader.js?v=1.0.0"></script>
   <div class="loader-body" id="loader"></div>
-
-
-
+  
   <div class="main">
 
     {{> header }}
