--- a/partials/styles.html
+++ b/partials/styles.html
@@ -1,2 +1,2 @@
-<link rel="stylesheet" href="/css/loader.css">
-<link rel="stylesheet" href="/css/style.css?v=1.2.1">
+<link rel="stylesheet" href="/css/loader.css?v=1.0.1">
+<link rel="stylesheet" href="/css/style.css?v=1.2.2">
