--- a/layouts/layout.html
+++ b/layouts/layout.html
@@ -10,7 +10,7 @@
   <meta property="og:description" content="{{description}}" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="{{url}}" />
-  <meta property="og:image" content="{{url}}/{{ogImage}}" />
+  <meta property="og:image" content="{{url}}/{{ogImage}}?v=1.1.0" />
   {{> favicon }}
   {{> styles }}
 
@@ -23,7 +23,7 @@
   </div>
   <script src="/js/loader.js?v=1.0.0"></script>
   <div class="loader-body" id="loader"></div>
-  
+
   <div class="main">
 
     {{> header }}
