Change logo pyctogram - update svg, styles, scripts - update version - change favicon

--- a/layouts/layout.html
+++ b/layouts/layout.html
@@ -19,7 +19,7 @@
 <body>
   {{> analytics }}
   <div id="emblem" class="logo-wrapper">
-    {{> logosvg }}
+    {{> pyctosvg }}
   </div>
   <script src="/js/loader.js?v=1.0.0"></script>
   <div class="loader-body" id="loader"></div>
