--- a/partials/favicon.html
+++ b/partials/favicon.html
@@ -1,9 +1,9 @@
-<link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png?v=ng9GE6kk8R">
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png?v=ng9GE6kk8R">
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png?v=ng9GE6kk8R">
-<link rel="manifest" href="/favicon/site.webmanifest?v=ng9GE6kk8R">
-<link rel="mask-icon" href="/favicon/safari-pinned-tab.svg?v=ng9GE6kk8R" color="#5bbad5">
-<link rel="shortcut icon" href="/favicon/favicon.ico?v=ng9GE6kk8R">
+<link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png?v=cvSDFF345">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png?v=cvSDFF345">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png?v=cvSDFF345">
+<link rel="manifest" href="/favicon/site.webmanifest?v=cvSDFF345">
+<link rel="mask-icon" href="/favicon/safari-pinned-tab.svg?v=cvSDFF345" color="#5bbad5">
+<link rel="shortcut icon" href="/favicon/favicon.ico?v=cvSDFF345">
 <meta name="msapplication-TileColor" content="#da532c">
-<meta name="msapplication-config" content="/favicon/browserconfig.xml?v=ng9GE6kk8R">
+<meta name="msapplication-config" content="/favicon/browserconfig.xml?v=cvSDFF345">
 <meta name="theme-color" content="#ffffff">
